简单的用户接口  伪接口
